// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct metadata for: dynamic route 1`] = `
{
  "description": "View transaction 0x12345 on Metacypher (Metacypher) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Metacypher transaction 0x12345 | Metacypher",
  },
  "title": "Metacypher transaction 0x12345 | Metacypher",
}
`;

exports[`generates correct metadata for: dynamic route with API data 1`] = `
{
  "description": "0x12345, balances and analytics on the Metacypher (Metacypher) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Metacypher USDT token details | Metacypher",
  },
  "title": "Metacypher USDT token details | Metacypher",
}
`;

exports[`generates correct metadata for: static route 1`] = `
{
  "description": "Metacypherscan is the blockchain explorer for Metacypher Neural AI Blockchain.",
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_placeholder.png",
    "title": "Metacypher blocks | Metacypher",
  },
  "title": "Metacypher blocks | Metacypher",
}
`;
